== Version 2.5.23 Work in progress (not released -- this is a draft) ==

== Version 2.5.22 ==

  Users side :
  ------------
    # A crash in the job scheduler (command "creme_job_manager") has been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The method 'creme_core.utils.CremeDiscoverRunner.setup_databases()' has been updated to prevent running
          the 'creme_populate' command on the default test database when the test suite is launched in
          parallel mode. This change is done to prevent cache leaking when the test processes are forked.
          This is a backport from Creme '2.7'.
        # The class 'EnumerableModelChoiceField' now handles correctly callable objects for model-field default value.


== Version 2.5.21 ==

  Users side :
  ------------
    # The command "creme_populate" now returns a correct error code if an error happened.
      It's a backport from Creme 2.6
    # An loading issue (with the lib 'cryptography'), which caused crash at
      start-up in some environments, has been fixed.
    # The 'populate' scripts could failed on menu configuration in some cases.
    # There was issue when a FileRef is creating when a CremeModel is deleted:
      the path could be too long to be stored by the FileRef, which caused an error.


== Version 2.5.20 ==

  Users side :
  ------------
    # The render of history lines on TextFields (like "description") with line breaks has been improved.
    # Apps :
        * Opportunities :
            - Unsetting the current Quote was not possible if you did not create the relationship yourself.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The creation forms for HeaderFilter & EntityFilter now accept models with digits at the end of their name.
        # Apps :
            * Billing :
                - The Relation cache is now used in 'Line.related_document'.